networkpolicy/allow-all-to-front-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-from-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: filmcomments-fronted
  policyTypes:
    - Ingress
  ingress:
    - {}
