networkpolicy/deny-external-to-db-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-access-from-frontend-backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: filmcomments-fronted
        - podSelector:
            matchLabels:
              app: filmcomments-api
